# fastapi_ci

./: crud.py  database.py  main.py  models.py  pyproject.toml  pytest.ini  recipes.db  requirements-dev.txt  requirements.txt  schemas.py
.github/workflows/: ci.yml  main.yml
tests/: test_api.py
